# lwqq

./: .clang_complete  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile.am  README  autoclean.sh  autogen.sh  config.h.in  configure.ac  lwqq.pc.in
bindings/python/: test-login.py
bindings/python/lwqq/: common.py  core.py  enumerations.py  http.py  vplist.py
bindings/python/lwqq/tests/: test-login.py
cmake/: FindLibuv.cmake  FindSphinx.cmake  FindSqlite3.cmake
icons/: Makefile.am
icons/status/: Makefile.am
lib/: CMakeLists.txt  async-libev.c  async-libuv.c  async.c  async.h  async_impl.h  async_libev.c  async_libuv.c  http.c  http.h  info.c  info.h  internal.c  internal.h  js.c  logger.c  logger.h  login.c  login.h  lwdb.c  lwdb.h  lwjs.c  lwjs.h  lwqq.h  md5.c  md5.h  msg.c  msg.h  queue.c  smemory.c  smemory.h  tags  type.c  type.h  utility.c  utility.h  vplist.c  vplist.h  win32.c  win32.h
libev/: ev_win32.c
python/: lwqq-cli.py  test-login.py
python/lwqq/: async.py  base.py  common.py  core.py  http.py  lwjs.py  lwqq.py  msg.py  queue.py  smemory.py  types.py  vplist.py
src/: CMakeLists.txt  Makefile.am  cli.c
src/cli/: Makefile.am  cli.c  lwqq-cli
src/gui/: Makefile.am  buddylist.c  buddylist.h  buddytree.c  buddytree.h  chattextview.c  chattextview.h  chatwidget.c  chatwidget.h  chatwindow.c  chatwindow.h  loginpanel.c  loginpanel.h  main.c  mainpanel.c  mainpanel.h  mainwindow.c  mainwindow.h  msgloop.c  msgloop.h  splashpanel.c  splashpanel.h  statusbutton.c  statusbutton.h  tray.c  tray.h
src/include/: Makefile.am
src/include/lwqq/: Makefile.am  logger.h  msg.h  type.h
src/liblwqq/: Makefile.am  async.c  async.h  http.c  http.h  http_curl.c  info.c  info.h  json.c  login.c  login.h  msg.c  msg.h  smemory.h  type.c  type.h  unicode.c  url.c  url.h
src/liblwqq/libev/: Makefile.am  ev.c
src/liblwqq/libghttp/: Makefile.am  http_hdrs.c
src/libqq/: login.c  login.h
src/lwdb/: Makefile.am  lwdb.c  lwdb.h  swsqlite.c  swsqlite.h
src/pidgin-lwqq/: .fx_buddy.c.swp  .webqq.c.swp  CMakeLists.txt  Message.sh  async.c  fx_blist.c  fx_blist.h  fx_buddy.c  fx_buddy.h  fx_chat.c  fx_chat.h  fx_contact.c  fx_contact.h  fx_login.c  fx_login.h  fx_sip.c  fx_sip.h  fx_types.h  fx_user.c  fx_user.h  fx_util.c  webqq.c  webqq.h
src/pidgin-lwqq/include/libpurple/.svn/: all-wcprops  entries
src/pidgin-lwqq/po/: pidgin-webqq.pot  zh_CN.po
src/pidgin-lwqq/res/: city.xml  province.xml
src/ui/: main.c
test/: Makefile.am  test_login.c  test_login_async.c  test_lwdb.c  test_sendmsg.c  testlogin_async
