lib_LTLIBRARIES=libghttp.la
libghttp_la_CPPFLAGS= -I./libghttp
libghttp_la_LIBADD= 
libghttp_la_SOURCES= ghttp.c http_base64.h \
			http_hdrs.c http_resp.c\
			http_uri.c ghttp_constants.h\
			http_date.c http_hdrs.h\
			http_resp.h http_uri.h \
			ghttp.h http_date.h\
			http_req.c http_trans.c\
			http_base64.c http_global.h\
			http_req.h http_trans.h
AM_CFLAGS = -Wall -Werror
